# Claude-Proxy

./: .gitignore  CONFIGURATION.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
claude_proxy/: __init__.py  __main__.py  main.py
claude_proxy/api/: dependencies.py  errors.py  http_debug.py  schemas.py
claude_proxy/application/: policies.py  request_preparer.py  runtime_actions.py  runtime_contract.py  services.py  sse.py  tool_classifier.py
claude_proxy/capabilities/: __init__.py  bash_emulation.py  builtins.py  coverage_matrix.py  enums.py  families.py  generic_tool_misuse.py  ordinary_tool_emulation.py  record.py  registry.py  text_control.py  tool_use_normalize.py  tool_use_prepare.py
claude_proxy/domain/: enums.py  errors.py  models.py  ports.py  serialization.py
claude_proxy/infrastructure/: config.py  http.py  logging.py  resolvers.py
claude_proxy/runtime/: __init__.py  classifier.py  errors.py  event_log.py  invariants.py  orchestrator.py  policies.py  policy_binding.py  recovery.py  session_codec.py  session_store.py  state.py  state_machine.py  stream.py
config/: claude-proxy-test.yaml  claude-proxy.example.yaml  llm-proxy-test.yaml  llm-proxy.example.yaml  llm-proxy.yaml
docs/: migration-v2.md  spec.md  spec2.md  toolin2.md  tooling_ir.md
docs/runtime/: capability-coverage.json  capability-inventory-freeze.md  semantic-contract-matrix.md
llm_proxy/: __init__.py  __main__.py  jsonutil.py  main.py
tests/: conftest.py
(+162 files in other folders)
